--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-
-
-
 body{
     margin: 0px;
     
@@ -12,15 +9,43 @@ main{
     
 }
 
+p {
+    font-size: large;
+}
+
+nav {
+    padding-top: 0%;
+    font-size: large ; /* Tamaño moderado para el subtítulo */
+    font-weight: 300; /* Peso lde fuente más liviano para un look profesional */
+    color: #444; /* Color gris oscuro para un contraste suave */
+    text-align: center; /* Centrado del texto */
+    margin-top: 0%;
+}
+
+.subtitle {
+    font-size: 1.5em; /* Tamaño moderado para el subtítulo */
+    font-weight: 300; /* Peso de fuente más liviano para un look profesional */
+    color: #444; /* Color gris oscuro para un contraste suave */
+    text-align: center; /* Centrado del texto */
+    margin-top: 10px; /* Espacio arriba */
+    
+  }
+  
+.navbar a:hover{
+    background-color:rgb(98, 173, 138); 
+    
+}
+
+
 .carousel {
-    width: 90%; /* Cambia el ancho según prefieras */
-    max-width: 800px; /* Establece un ancho máximo */
+    /*width: 100%;  Cambia el ancho según prefieras */
+    max-width: 100%; /* Establece un ancho máximo */
     margin: 0 auto; /* Centra el carrusel horizontalmente */
   }
 
   .carousel-item {
     width: 100%; /* Toma todo el ancho del contenedor */
-    height: 50vh; /* Ocupa el 50% de la altura de la pantalla */
+    height: 80vh; /* Ocupa el 50% de la altura de la pantalla */
   } 
 
   .carousel-caption.overlay {
@@ -49,7 +74,4 @@ h1{
 }
 
 
-.navbar a:hover{
-    background-color:aliceblue; 
-}
 
